--- a/contrib/amd/scripts/amd.conf.5
+++ b/contrib/amd/scripts/amd.conf.5
@@ -40,7 +40,7 @@
 .\"
 .\" $Id: amd.conf.5,v 5.2.2.1 1997/02/09 15:11:15 ezk beta $
 .\"
-.TH AMQ.CONF 8 "7 August 1997"
+.TH AMD.CONF 8 "7 August 1997"
 .SH NAME
 amd.conf \- amd configuration file
 .SH SYNOPSIS
